# pyFeltor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
pyfeltor/: __init__.py
pyfeltor/dg/: __init__.py  enums.py  evaluation.py  grid.py  test.py  utility.py
pyfeltor/dg/create/: __init__.py  derivative.py  dx.py  elliptic.py  interpolation.py  operators.py  weights.py
pyfeltor/dg/geo/: __init__.py  circular.cpp  flux.cpp  geometries.cpp  guenter.cpp  mod.cpp  polynomial.cpp  solovev.cpp  toroidal.cpp  utility.cpp
tests/: enrx_tcv.json  geometry_params_Xpoint.json  test_derivative.py  test_elliptic.py  test_evaluation.py  test_geometries.py  test_grid.py  test_interpolation.py
