[metadata]
name = pyfeltor
url = https://github.com/feltor-dev/pyFeltor
author = Matthias Wiesenberger
author_email = mattwi@fysik.dtu.dk
version="0.1.0",
description = A subset of Feltor's dg library as a python implementation
license = MIT License
python_requires >= 3.8
long_description = file: README.md
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

[options]
setup_requires =
    setuptools>=58
install_requires =
    numpy >= 1.21.1
include_package_data = True
packages = find:

[options.extras_require]
calc =
    numpy >= 1.21.1
docs = sphinx >= 1.4
